--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-numpy==1.23.5
-opencv-python-headless
-yolov5
-streamlit
-Pillow
+numpy==1.26.4
+opencv-python-headless==4.9.0.80
+torch==2.2.0
+torchvision==0.17.0
+torchaudio==2.2.0
+yolov5==7.0.11
+streamlit==1.32.0
+Pillow==10.2.0
+setuptools>=65.5.0
+wheel
